IDEA-324298 javadoc: migrate to the new DocumentationTarget API
#IDEA-324298 Fixed

GitOrigin-RevId: 37b4edab464da6cbabaa6a8b7d1c31bce0d8d254